<package>
  <name>freemoovr_engine</name>
  <version>0.0.1</version>
  <description>
    freemoovr_engine
  </description>
  <author>Andrew Straw</author>
  <maintainer email="strawman@astraw.com">Andrew Straw</maintainer>
  <license>TODO</license>
  <url>https://strawlab.org/freemoovr_engine</url>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>message_generation</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>osg</build_depend>
  <!--rosdep name="osgcompute"/-->
  <build_depend>openexr</build_depend>
  <build_depend>libxmu</build_depend>
  <build_depend>libxi</build_depend>
  <build_depend>poco</build_depend>
  <build_depend>jansson</build_depend>
  <build_depend>cython</build_depend>

  <run_depend>roscpp</run_depend>
  <run_depend>message_runtime</run_depend>
  <run_depend>sensor_msgs</run_depend>
  <run_depend>geometry_msgs</run_depend>
  <run_depend>rospy</run_depend>
  <run_depend>tf</run_depend>
  <run_depend>tf_conversions</run_depend>
<!--  <run_depend>rosgobject</run_depend> -->
  <run_depend>dynamic_reconfigure</run_depend>
  <run_depend>camera_calibration</run_depend>
  <run_depend>python-yaml</run_depend>
  <run_depend>python-ode</run_depend>
  <run_depend>python-scipy</run_depend>
  <run_depend>python-pymvg</run_depend>
  
  <export>
    <cpp cflags="-I${prefix}/include" lflags="-Wl,-rpath,${prefix}/lib -L${prefix}/lib -lfreemoovr_engine"/>
  </export>

</package>
